# sudoku

./: AllowedValues.cc  AllowedValues.h  BUILD  Board.cc  Board.h  CMakeLists.txt  Group.cc  Group.h  README.md  Square.cc  Square.h  TODO  WORKSPACE  action_tests  main.cc
.github/workflows/: bazel.yml  build_and_test.yml
app/: CMakeLists.txt  main.cc  puzzle_generator.cc  valid_board.cc
lib/: AllowedValues.cc  AllowedValues.h  BUILD  Board.cc  Board.h  CMakeLists.txt  Group.h  Square.cc  Square.h
py/: pyproject.toml
py/sudoku/: create_puzzles.py
sudokus_for_testing/: advanced1.sudoku  advanced230.sudoku  evil_example.sudoku  expert40.sudoku  expert90.sudoku  expert_example.sudoku  hard_example.sudoku  hidden_pair_example.sudoku  hidden_pair_split_example.sudoku  locked_candidate_example.sudoku  naked_pair_example.sudoku  naked_pair_split_example.sudoku  naked_triple_example.sudoku  pointing_tuple_example.sudoku  pointing_tuple_example2.sudoku  test.sudoku  xwing_example.sudoku  xwing_example2.sudoku
test/: BUILD  CMakeLists.txt  test_AllowedValues.cc
