[tool.poetry]
name = "sudoku"
version = "0.1.0"
description = ""
authors = ["Avram Levi <avramlevi82@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
argparse = "^1.4.0"
logging = "^0.4.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
